--- a/atom/src/app/books-list/books-list.component.html
+++ b/atom/src/app/books-list/books-list.component.html
@@ -10,8 +10,8 @@
 <app-search></app-search>
 
 <h3 class="sub-heading">All Books</h3>
-<div class="row">
-    <div class="col-md-6 my-4" *ngFor="let book of books.items">
+<div class="row" *ngIf="books">
+    <div class="col-md-6 my-4" *ngFor="let book of books?.items">
         <div class="card bg-white custom-card">
             <div class="card-body">
                 <h3 class="book-header">{{book.volumeInfo.title}}</h3>
