--- a/atom/src/app/books-list/books-list.component.html
+++ b/atom/src/app/books-list/books-list.component.html
@@ -9,20 +9,25 @@
 <!-- Search component -->
 <app-search></app-search>
 
-<h3 class="sub-heading">All Books</h3>
-<div class="row" *ngIf="books">
-    <div class="col-md-6 my-4" *ngFor="let book of books?.items">
-        <div class="card bg-white custom-card">
-            <div class="card-body">
-                <h3 class="book-header">{{book.volumeInfo.title}}</h3>
-                <p>Authors:
-                    <ng-container *ngFor="let author of book.volumeInfo.authors">
-                        <span> {{author}}</span>
-                    </ng-container>
-                </p>
-                <p>Publisher: {{book.volumeInfo.publisher}}</p>
-                <p>PublishedDate: {{book.volumeInfo.publishedDate}}</p>
+<ng-container *ngIf="books || !isBooksNull; else noBooks">
+    <h3 class="sub-heading">All Books</h3>
+    <div class="row">
+        <div class="col-md-6 my-4" *ngFor="let book of books?.items">
+            <div class="card bg-white custom-card">
+                <div class="card-body">
+                    <h3 class="book-header">{{book.volumeInfo.title}}</h3>
+                    <p>Authors:
+                        <ng-container *ngFor="let author of book.volumeInfo.authors">
+                            <span> {{author}}</span>
+                        </ng-container>
+                    </p>
+                    <p>Publisher: {{book.volumeInfo.publisher}}</p>
+                    <p>PublishedDate: {{book.volumeInfo.publishedDate}}</p>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</ng-container>
+<ng-template #noBooks>
+    <h3>No Books found</h3>
+</ng-template>
