--- a/atom/src/app/loader/loader.component.html
+++ b/atom/src/app/loader/loader.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="loaderService.showLoader" [ngStyle]="{'opacity' : '0.7'}" class="overlay">
-    <div class="loader"><img src="assets/image/loader.gif" alt="Loader" /></div>
+<div *ngIf="loaderService.showLoader" [ngStyle]="{'opacity' : '0.6'}" class="overlay">
+    <div class="loader"></div>
 </div>
