--- a/atom/src/app/books-list/books-list.component.html
+++ b/atom/src/app/books-list/books-list.component.html
@@ -3,7 +3,7 @@
         <h1 class="heading">Books</h1>
     </div>
     <div class="col-auto">
-        <button class="btn btn-primary">Create New Book</button>
+        <a routerLink="/create-new-book" class="btn btn-primary">Create New Book</a>
     </div>
 </div>
 <!-- Search component -->
@@ -13,18 +13,7 @@
     <h3 class="sub-heading">All Books</h3>
     <div class="row">
         <div class="col-md-6 my-4" *ngFor="let book of books?.items">
-            <div class="card bg-white custom-card">
-                <div class="card-body">
-                    <h3 class="book-header">{{book.volumeInfo.title}}</h3>
-                    <p>Authors:
-                        <ng-container *ngFor="let author of book.volumeInfo.authors">
-                            <span> {{author}}</span>
-                        </ng-container>
-                    </p>
-                    <p>Publisher: {{book.volumeInfo.publisher}}</p>
-                    <p>PublishedDate: {{book.volumeInfo.publishedDate}}</p>
-                </div>
-            </div>
+            <app-book [book]="book"></app-book>
         </div>
     </div>
 </ng-container>
