--- a/atom/src/app/containers/search/search.component.scss
+++ b/atom/src/app/containers/search/search.component.scss
@@ -14,4 +14,5 @@
 .search-input:focus {
     background-color: unset !important;
     border-color: unset !important;
+    box-shadow: inset 0 -1px 0 #ddd;
   }
