--- a/atom/src/app/layout/components/sidebar/sidebar.component.html
+++ b/atom/src/app/layout/components/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     </li>
     <li class="nav-item"><a class="nav-link" href="javascript:void(0)">
         <i class="fa fa-pencil-square-o"></i>
-        <span *ngIf="!isCollapsed">Content Management </span> 
+        <span *ngIf="!isCollapsed">Content Management <i class="fa fa-chevron-down"></i></span> 
     </a></li>
     <li class="nav-item"><a class="nav-link" href="javascript:void(0)"><i class="fa fa-pencil-square-o"></i>
         <span *ngIf="!isCollapsed">Courses</span></a></li>
