--- a/atom/src/app/layout/components/sidebar/sidebar.component.scss
+++ b/atom/src/app/layout/components/sidebar/sidebar.component.scss
@@ -1,16 +1,16 @@
 
 .nav-item{
-    margin-bottom: 10px;
+    margin-bottom: 12px;
     text-transform: uppercase;
 }
 .nav-link{
     color: #9B9B9B;
-    font-size: 15px;
+    font-size: 13px;
     position: relative; 
-    padding-left: 35px;
+    padding-left: 38px;
     min-height: 40px;
 }
-.nav-link i{
+.nav-link > i{
     position: absolute;
     left: 0;
     font-size: 22px;
