--- a/atom/src/app/books-list/books-list.component.scss
+++ b/atom/src/app/books-list/books-list.component.scss
@@ -1,4 +1,4 @@
-
+@import "src/assets/resources/variable";
 .heading{
     font-weight: 700;
     font-size: 2.2rem;
@@ -6,5 +6,5 @@
 .sub-heading{
     font-size: 1.5rem;
     font-weight: 600;
-    color: #465A75;
+    color: $color-subheading;
 }
