--- a/atom/src/app/books-list/books-list.component.html
+++ b/atom/src/app/books-list/books-list.component.html
@@ -7,16 +7,16 @@
     </div>
 </div>
 <!-- Search component -->
-<app-search></app-search>
+<app-search (searchEmitter)="searchBooks($event)"></app-search>
 
-<ng-container *ngIf="books || !isBooksNull; else noBooks">
+<ng-container *ngIf="filteredBooks?.items.length && !isLoading; else noBooks">
     <h3 class="sub-heading">All Books</h3>
     <div class="row">
-        <div class="col-md-6 my-4" *ngFor="let book of books?.items">
+        <div class="col-md-6 my-4" *ngFor="let book of filteredBooks?.items">
             <app-book [book]="book"></app-book>
         </div>
     </div>
 </ng-container>
 <ng-template #noBooks>
-    <h3>No Books found</h3>
+    <h3 *ngIf="!isLoading">No Books found</h3>
 </ng-template>
