--- a/atom/src/app/layout/components/sidebar/sidebar.component.html
+++ b/atom/src/app/layout/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <ul class="navbar-nav pt-3">
-    <li class="nav-item"><a class="nav-link" href="javascript:void(0)" (click)="toggleSidebar()"><i class="fa fa-align-left"></i> <span *ngIf="!isCollapsed">Menu</span></a>
+    <li (keypress)="enterClick($event)" class="nav-item"><a class="nav-link" href="javascript:void(0)" (click)="toggleSidebar()"><i class="fa fa-align-left"></i> <span *ngIf="!isCollapsed">Menu</span></a>
     </li>
     <li class="nav-item"><a class="nav-link" href="javascript:void(0)">
         <i class="fa fa-pencil-square-o"></i>
