--- a/atom/src/app/shared/search/search.component.html
+++ b/atom/src/app/shared/search/search.component.html
@@ -1,7 +1,7 @@
 <div class="search-bar mt-5 mb-4">
     <i class="fa fa-search position-absolute ml-2 text-dark" aria-hidden="true"></i>
     <input type="text" class="form-control search-input" 
-        placeholder="Search" />
+        placeholder="Search" (keyup)="searchBooks($event)"/>
 </div>
 
 
