--- a/atom/src/styles.scss
+++ b/atom/src/styles.scss
@@ -1,7 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Importing Bootstrap SCSS file. */
+@import "assets/resources/reset";
 @import '~bootstrap/scss/bootstrap';
-body{
-    overflow: hidden;
-}
